Fix modal z-index and sizing on small screens

--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -27,11 +27,12 @@
 }
 
 .moosicbox-modal-container {
-    z-index: 11;
+    z-index: 35;
 }
 
 .moosicbox-modal {
     position: fixed;
+    width: max(70vw, min(100vw, 1000px));
     left: 50%;
     top: 47%;
     transform: translate(-50%, -50%);
@@ -56,4 +57,11 @@
     margin-left: auto;
     margin-right: auto;
     width: 34px;
+}
+
+@media (max-width: 600px) {
+    .moosicbox-modal {
+        width: 100%;
+        padding: 3% 5px;
+    }
 }
